Fix spacing in mobile view of component

--- a/src/components/DateCalc.scss
+++ b/src/components/DateCalc.scss
@@ -137,7 +137,7 @@
             margin-top: 50px;
             margin-right: 30px;
             p {
-                margin: 10px 0;
+                margin: 10px 0 0 25px;
                 font-style: italic;  
                 font-size: 40px;
                 letter-spacing: 2px;
